--- a/src/app.css
+++ b/src/app.css
@@ -12,3 +12,22 @@ body {
   margin: 0;
   background: darkslategray;
 }
+
+.characterCard {
+  border: 1px solid black;
+  margin: 1rem 1rem;
+}
+
+.characterCard > h3 {
+  text-align: center;
+}
+
+main {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+header {
+  background-color: #ffffff;
+  text-align: center;
+}
